--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,16 +1,172 @@
-html {
-    box-sizing: border-box;
+@import "vars";
+@import "global";
+
+//start header
+.header__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
+//end header
+
+// start main
+.main {
+    min-height: 700px;
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    &__box {
+        max-width: 750px;
+        padding: 40px 15px 60px;
+        margin: 0 auto;
+        text-align: center;
+        &-images img {
+            width: 170px;
+            height: 41px;
+            margin-bottom: 35px;
+            text-align: center;
+        }
+        &-text {
+            margin-top: 20px;
+            margin-bottom: 20px;
+            line-height: 23px;
+        }
+        &-btn a {
+            border: 1px solid #fff;
+            color: #fff;
+            padding: 18px 30px;
+        }
+    }
+}
+//end main
+
+//start services
+.services {
+    padding-top: 55px;
+    padding-bottom: 75px;
+    text-align: center;
+    &__text {
+        margin-top: 20px;
+        color: $text;
+        max-width: 730px;
+        margin: 20px auto 50px;
+    }
+}
+.services__items {
+    display: flex;
+    justify-content: space-between;
+    &-item {
+        max-width: 250px;
+    }
+    &-images {
+        background-color: $blue;
+        width: 105px;
+        height: 105px;
+        border-radius: 50%;
+        text-align: center;
+        margin-bottom: 22px;
+        & img {
+            margin-top: 33px;
+        }
+    }
+    &-title {
+        display: block;
+        color: $blue;
+        margin-bottom: 20px;
+    }
+    &-text {
+        color: $text
+    }
+}
+//end services
+
+//start quotation
+.quotation {
+    background-color: $darkblue;
+    padding-top: 65px;
+    padding-bottom: 55px;
+    &__box {
+        max-width: 800px;
+        margin: 0 auto;
+        text-align: center;
+        &-text {
+            font-weight: 300;
+            font-size: 25px;
+            margin-bottom: 35px;
+        }
+    }
+}
+// end quotation
+
+// start portfolio
+.portfolio {
+    padding-top: 60px;
+    padding-bottom: 65px;
+    text-align: center;
+    &__text {
+        max-width: 760px;
+        margin: 0 auto;
+        color: $text;
+        margin-top: 20px;
+        margin-bottom: 60px;
+    }
+    &__gallery {
+        margin-bottom: 30px;
+        &-wrapper {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+        &-item {
+            margin-bottom: 20px;
+        }
+        &-btn {
+            margin-bottom: 60px;
+            button {
+                background-color: $blue;
+                color: #fff;
+                text-transform: uppercase;
+                font-size: 20px;
+                padding: 10px 20px;
+                outline: none;
+                border: none;
+                cursor: pointer;
+                & + button {
+                    margin-left: 20px;
+                }
+            }
+            &.mixitup-control-active {
+                button {
+                    background-color: #00c7fc;
+                }
+            }
+        }
+        &-img {
+            background-size: cover;
+            background-position: top center;
+            background-repeat: no-repeat;
+            width: 275px;
+            height: 200px;
+        }
+    }
+    &__btn-arrow {
+        background-color: $blue;
+        width: 55px;
+        height: 55px;
+        border-radius: 50%;
+        margin-bottom: 60px;
+        & img {
+            margin-top: 17px;
+        }
+    }
+    &__btn {
+        background-color: $blue;
+        color: #fff;
+        padding: 20px 35px;
+    }
 }
 
-.box {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    display: flex;
-    transition: all .3s;
-}
+// end portfolio
