--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -31,7 +31,8 @@
         font-size: 20px;
         width: 100%;
         transition: all 0.5s;
-        &:hover {
+        &:hover,
+        &:focus {
             color: $text;
             transform: scale(1.2);
             margin-left: 25px;
@@ -90,7 +91,8 @@
             color: #fff;
             padding: 18px 30px;
             transition: all .5s;
-            &:hover {
+            &:hover,
+            &:focus {
                 color: $darkblue;
                 background-color: #fff;
             }
@@ -233,7 +235,8 @@
         padding: 20px 35px;
         border: 1px solid transparent;
         transition: all .5s;
-        &:hover {
+        &:hover,
+        &:focus {
             background-color: #ffffff;
             color: $darkblue;
             border-color: $darkblue;
@@ -408,7 +411,8 @@
         padding: 18px 45px;
         border: 1px solid transparent;
         transition: all .5s;
-        &:hover {
+        &:hover,
+        &:focus {
             background-color: #ffffff;
             color: $darkblue;
             border-color: $darkblue;
@@ -537,7 +541,8 @@
             cursor: pointer;
             border: 1px solid transparent;
             transition: all .5s;
-            &:hover {
+            &:hover,
+            &:focus {
                 background-color: #ffffff;
                 color: $darkblue;
                 border-color: $darkblue;
@@ -546,6 +551,11 @@
     }
 }
 .news__gallery {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: minmax(300px, auto)  minmax(300px, auto) minmax(320px, auto);
+    // grid-auto-rows: minmax(300px, auto); 
+    grid-gap: 30px;
     margin-bottom: 25px;
     &-btn {
         margin-bottom: 60px;
@@ -567,28 +577,82 @@
             }
         }
     }
-    &-content {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 30px;
-    }
-    &-item {
-        max-width: 570px;
-        width: 100%;
+    &-item--party {
+        background-image: url(../images/content/grid_image_4.jpg);
         position: relative;
         background-position: top center;
         background-repeat: no-repeat;
         background-size: cover;
-        min-height: 300px;
+        // min-height: 300px;
+    }
+    &-item--design {
+        background-image: url(../images/content/grid_image_5.jpg);
+        position: relative;
+        background-position: top center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        // min-height: 300px;
+    }
+    &-item--great {
+        background-image: url(../images/content/grid_image_6.jpg);
+        position: relative;
+        background-position: top center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        // min-height: 300px;
+    }
+    &-item--studio {
+        background-image: url(../images/content/grid_image_8.jpg);
+        position: relative;
+        background-position: top center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        // min-height: 600px;
+    }
+    &-item--new {
+        background-image: url(../images/content/grid_image_2.jpg);
+        position: relative;
+        background-position: top center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        // min-height: 300px;
+    }
+    &-item--member {
+        background-image: url(../images/content/grid_image_3.jpg);
+        position: relative;
+        background-position: top center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        // min-height: 300px;
+    }
+
+    &-item:nth-child(1),
+    &-item:nth-child(2) {
+        grid-column: span 3;
+        grid-row: span 1;
+    }
+    &-item:nth-child(3) {
+        grid-column: span 4;
+        grid-row: span 1;
+    }
+    &-item:nth-child(4) {
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+    &-item:nth-child(5),
+    &-item:nth-child(6) {
+        grid-column: span 2;
+        grid-row: span 1;
     }
     &-info {
         background-color: $darkblue;
-        width: 285px;
         padding: 25px;
         text-align: left;
         position: absolute;
         top: 0;
+        bottom: 0;
         right: 0;
+        max-width: 285px;
     }
     &-title {
         font-size: 25px;
@@ -611,18 +675,6 @@
         right: 285px;
     }
 }
-.news__gallery-content--bottom {
-    display: flex;
-    justify-content: space-between;
-}
-.news__gallery-aside {
-    max-width: 370px;
-    width: 100%;
-    background-position: top center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-}
 .news__aside-info {
     padding: 25px;
     background-color: $darkblue;
@@ -642,31 +694,26 @@
     left: 55px;
 }
 .news__inner {
-    max-width: 770px;
-    width: 100%;
     &-item {
-        margin-right: 30px;
         &--wrapper {
             background-color: rgba(34, 44, 64, 0.8); 
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
         }
     }
     &-info {
         text-align: left;
         padding: 25px;
-    }
-    &-box {
-        display: flex;
-        margin-top: 30px;
-        margin-right: 30px;
-        justify-content: space-between;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
     }
 }
-.news__box-item {
-    max-width: 380px;
-    width: 100%;
-}
-
-
 //end news
 
 //start customers
@@ -779,6 +826,9 @@
         background-color: transparent;
         color: #fff;
         margin-bottom: 25px;
+        &:focus {
+            box-shadow: 0px 0px 10px 3px lightblue;
+        }
         &::placeholder {
             color: #fff;
         }
@@ -796,6 +846,9 @@
         background-color: transparent;
         color: #fff;
         margin-bottom: 30px;
+        &:focus {
+            box-shadow: 0px 0px 10px 3px lightblue;
+        }
         &::placeholder {
             color: #fff;
         }
@@ -808,7 +861,8 @@
         padding: 20px 55px;
         border: none;
         transition: all .5s;
-        &:hover {
+        &:hover,
+        &:focus {
             background-color: $darkblue;
             color: #fff;
         }
@@ -829,5 +883,54 @@
     }
 }
 //end footer
+
+.parallax-window {
+    background-image: url("../images/header/header_bg.jpg");
+    height: 700px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax {
+    background-image: url("../images/content/about_bg_2.jpg");
+    min-height: 729px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax-box {
+    background-image: url("../images/content/narrow_bg.jpg");
+    min-height: 317px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax-item {
+    background-image: url("../images/content/gallery_image_1.jpg");
+    min-height: 364px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax-elem {
+    background-image: url("../images/content/narrow_bg.jpg");
+    min-height: 228px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.parallax-section {
+    background-image: url("../images/content/narrow_bg.jpg");
+    min-height: 183px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 @import "media";
